--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react": "~18.2.45",
+    "color-convert": "^2.0.1",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
     "expo-font": "^12.0.5",
@@ -21,13 +22,14 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native": "^0.73.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
