--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "cross-env EXPO_NO_DOTENV=1 expo start --tunnel",
+    "start:dev": "cross-env APP_ENV=development yarn run start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -11,12 +12,16 @@
   "dependencies": {
     "@types/react": "~18.2.45",
     "color-convert": "^2.0.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
     "expo-font": "^12.0.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.12.0",
+    "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -24,7 +29,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
