--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "cross-env EXPO_NO_DOTENV=1 expo start --tunnel",
-    "start:dev": "cross-env APP_ENV=development yarn run start",
-    "start:prod": "cross-env APP_ENV=production yarn run start",
+    "start": "expo start --tunnel",
+    "start:dev": "dotenvx run -f .env.development -- yarn run start",
+    "start:prod": "dotenvx run -f .env.development -- yarn run start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^0.44.1",
     "@types/react": "~18.2.45",
+    "axios": "^1.7.2",
     "color-convert": "^2.0.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
@@ -23,15 +23,16 @@
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
     "nativewind": "^2.0.11",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0",
     "yup": "^1.4.0",
-    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
