--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^0.44.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@types/react": "~18.2.45",
     "axios": "^1.7.2",
     "color-convert": "^2.0.1",
@@ -22,13 +23,18 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-animatable": "^1.4.0",
+    "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0",
