--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^0.44.1",
     "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-picker/picker": "^2.7.6",
     "@types/react": "~18.2.45",
     "axios": "^1.7.2",
     "color-convert": "^2.0.1",
