--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^0.44.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.6",
     "@types/react": "~18.2.45",
@@ -24,6 +25,7 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "query-string": "^9.0.0",
