--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "nativewind": "^2.0.11",
     "query-string": "^9.0.0",
     "react": "18.2.0",
