--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "~18.2.45",
     "axios": "^1.7.2",
     "color-convert": "^2.0.1",
+    "crypto": "^1.0.1",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
