--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "crypto": "^1.0.1",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.6",
-    "expo-dev-client": "~3.3.12",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "minipass": "^7.1.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "nativewind": "^2.0.11",
