--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-phone-input": "^1.3.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-swiper": "^1.6.0",
