--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^10.12.0",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.11.4",
     "minipass": "^7.1.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
