--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-date-picker": "^5.0.4",
+    "react-native-document-picker": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-phone-input": "^1.3.7",
