--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-document-picker": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-international-phone-number": "^0.7.6",
+    "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
