--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
+    "platforms": [ "ios", "android" ],
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
