--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "start:dev": "dotenvx run -f .env.development -- yarn run start",
-    "start:prod": "dotenvx run -f .env.development -- yarn run start",
+    "start": "expo start -c",
+    "start:dev": "NODE_ENV=development yarn run start",
+    "start:prod": "NODE_ENV=development yarn run start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "^0.44.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
@@ -38,8 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-document-picker": "^9.3.0",
-    "react-native-dotenv": "^3.4.11",
+    "react-native-document-picker": "8.0.0",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
@@ -56,7 +54,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.6.0",
-    "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "eslint": "8.x",
     "eslint-plugin-react": "^7.34.3",
