--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native": "^6.1.18",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/react": "~18.2.45",
     "axios": "^1.7.2",
