--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "crypto": "^1.0.1",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "^4.0.20",
+    "expo-file-system": "^17.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
@@ -37,7 +39,8 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-document-picker": "8.0.0",
+    "react-native-blob-util": "^0.19.11",
+    "react-native-document-picker": "^9.3.0",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
