--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-document-picker": "8.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
