--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
@@ -38,7 +39,6 @@
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-document-picker": "8.0.0",
-    "react-native-fs": "^2.20.0",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
