--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.4",
+    "lottie-react-native": "6.7.0",
     "minipass": "^7.1.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
