--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "color-convert": "^2.0.1",
     "crypto": "^1.0.1",
     "expo": "~51.0.20",
+    "expo-camera": "^15.0.15",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.20",
     "expo-file-system": "^17.0.1",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "^16.0.4",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.0",
