--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,12 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "env": {
+        "EXPO_PUBLIC_BACKEND_API": "http://192.168.1.110:3000/",
+        "JWT_SIGNATURE": "SECUREGUARDPRO2024"
+      }
+    }
   },
   "submit": {
     "production": {}
