--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.20",
     "expo-file-system": "^17.0.1",
+    "expo-image-manipulator": "^12.0.5",
     "expo-linking": "~6.3.1",
     "expo-media-library": "^16.0.4",
     "expo-router": "~3.5.18",
