--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
+    "react-query": "^3.39.3",
     "typescript": "~5.3.3",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
