--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "react-native-blob-util": "^0.19.11",
     "react-native-date-picker": "^5.0.5",
     "react-native-document-picker": "^9.3.0",
+    "react-native-gesture-handler": "^2.20.0",
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
+    "react-native-reanimated": "^3.15.4",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-swiper": "^1.6.0",
-    "react-native-swiper-flatlist": "^3.2.4",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
