--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "secureGuardPro",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "./src/assets/app-icons/appstore.png",
     "userInterfaceStyle": "light",
     "platforms": [ "ios", "android" ],
     "splash": {
@@ -21,7 +21,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "foregroundImage": "./src/assets/app-icons/appstore.png",
         "backgroundColor": "#ffffff"
       }
     },
