--- a/app.json
+++ b/app.json
@@ -5,13 +5,13 @@
     "slug": "secureGuardPro",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/app-icons/appstore.png",
+    "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
     "platforms": [ "ios", "android" ],
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#D2DEDC"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,7 +21,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/app-icons/appstore.png",
+        "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
