--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "~18.2.45",
     "axios": "^1.7.2",
     "color-convert": "^2.0.1",
+    "core-js-pure": "^3.38.1",
     "crypto": "^1.0.1",
     "expo": "~51.0.20",
     "expo-camera": "^15.0.15",
@@ -54,6 +55,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
