--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@bhavberi/react-native-user-avatar": "^2.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "2.7.5",
@@ -55,7 +56,6 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
