--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "crypto": "^1.0.1",
     "expo": "~51.0.20",
     "expo-camera": "^15.0.15",
-    "expo-constants": "~16.0.2",
+    "expo-constants": "^16.0.2",
     "expo-dev-client": "^4.0.20",
+    "expo-device": "^6.0.2",
     "expo-file-system": "^17.0.1",
     "expo-image-manipulator": "^12.0.5",
     "expo-linking": "~6.3.1",
     "expo-media-library": "^16.0.4",
+    "expo-notifications": "^0.28.19",
     "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.0",
@@ -52,7 +54,7 @@
     "react-native-international-phone-number": "^0.7.6",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
-    "react-native-reanimated": "^3.15.4",
+    "react-native-reanimated": "3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
