--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-international-phone-number": "^0.7.6",
+    "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "3.16.1",
