--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^11.1.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
