--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "dependencies": {
     "@bhavberi/react-native-user-avatar": "^2.0.3",
@@ -43,7 +51,6 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "nativewind": "^2.0.11",
-    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
@@ -70,11 +77,16 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.6.0",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "eslint": "8.x",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-testing-library": "^7.1.1",
     "globals": "^15.8.0",
+    "jest": "29.2.1",
+    "jest-expo": "51.0.3",
     "tailwindcss": "3.3.2",
     "typescript-eslint": "^7.15.0"
   },
