--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
     "setupFilesAfterEnv": ["<rootDir>/jest-setup.ts"],
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "^@components/(.*)$": "<rootDir>/src/components/$1",
+      "^@assets/(.*)$": "<rootDir>/src/assets/$1",
+      "^@store/(.*)$": "<rootDir>/src/store/$1",
+      "^@config/(.*)$": "<rootDir>/src/config/$1",
+      "^@api/(.*)$": "<rootDir>/src/api/$1",
+      "^@pages/(.*)$": "<rootDir>/src/pages/$1",
+      "^@dtos/(.*)$": "<rootDir>/src/dtos/$1",
+      "^@helpers/(.*)$": "<rootDir>/src/helpers/$1",
+      "^@contexts/(.*)$": "<rootDir>/src/context/$1"
     }
   },
   "dependencies": {
