--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
       "^@pages/(.*)$": "<rootDir>/src/pages/$1",
       "^@dtos/(.*)$": "<rootDir>/src/dtos/$1",
       "^@helpers/(.*)$": "<rootDir>/src/helpers/$1",
-      "^@contexts/(.*)$": "<rootDir>/src/context/$1"
+      "^@contexts/(.*)$": "<rootDir>/src/context/$1",
+      "^@app/(.*)$": "<rootDir>/src/app/$1"
     }
   },
   "dependencies": {
-    "@bhavberi/react-native-user-avatar": "^2.0.3",
+    "@bhavberi/react-native-user-avatar": "^2.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "2.7.5",
@@ -82,6 +83,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-share": "^11.1.0",
+    "react-native-user-avatar": "^1.0.8",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3",
