--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@pages/*": ["./src/pages/*"],
       "@dtos/*": ["./src/dtos/*"],
       "@helpers/*": ["./src/helpers/*"],
-      "@contexts/*": ["./src/context/*"]
+      "@contexts/*": ["./src/context/*"],
+      "@app/*": ["./src/app/*"]
     }
   },
   "extends": "expo/tsconfig.base",
