--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-international-phone-number": "^0.7.6",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pdf": "^6.7.6",
     "react-native-phone-input": "^1.3.7",
     "react-native-reanimated": "3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
